<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/search_criteria"
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:focusable="true"
        android:hint="@string/search_hint"
        android:imeActionLabel="@string/search"
        android:imeOptions="actionSearch"
        android:inputType="textFilter"
        android:maxLength="50" />

    <Button
        android:id="@+id/go_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_margin="5dip"
        android:background="@drawable/buttonstyle"
        android:text="@string/search" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/shezhi"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:text="@string/shezhi" />

        <Button
            android:id="@+id/xiazailiebiao"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:text="@string/xiazailiebiao" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/jingxi"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:text="@string/jingxi" />

        <Button
            android:id="@+id/tuichu"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:text="@string/action_exit" />
    </LinearLayout>

</LinearLayout>