<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_list_item_selector"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:background="#ffd4d5d6" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/search_editview_height"
        android:animationCache="true"
        android:background="@color/white"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@id/searchButton"
            android:layout_width="50.0dip"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/search_bar_btn" />

        <EditText
            android:id="@id/SearchText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4.0dip"
            android:layout_toLeftOf="@id/go_to_hot_image_view"
            android:background="@null"
            android:focusableInTouchMode="true"
            android:hint="@string/searchHint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#ffb2b2b2"
            android:textSize="16.0sp" />

        <TextView
            android:id="@+id/show_num"
            android:layout_width="40dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="5dip"
            android:layout_toLeftOf="@id/searchButton"
            android:shadowColor="@color/red"
            android:shadowDx="4"
            android:shadowDy="4"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/item_primary_title_text_color"
            android:textSize="12sp" />

        <ImageView
            android:id="@id/go_to_hot_image_view"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/searchButton"
            android:padding="10.0dip"
            android:paddingRight="4.0dip"
            android:src="@drawable/search_result_close"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="#ffd4d5d6" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <ScrollView
            android:id="@+id/tongzhi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/home_list_item_selector" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_margin="5dip"
                    android:shadowColor="@color/azure"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:text="@string/tongzhi"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/item_primary_title_text_color" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.0dip"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:background="#ffd4d5d6" />

                <LinearLayout
                    android:id="@id/wrapper"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@id/content_wraper"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="10.0dip"
                        android:paddingLeft="15.0dip"
                        android:paddingRight="15.0dip"
                        android:paddingTop="10.0dip" >

                        <LinearLayout
                            android:id="@id/content_custom"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" />

                        <LinearLayout
                            android:id="@id/custom"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@id/buttonPanel"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4.0dip"
                        android:layout_marginTop="4.0dip"
                        android:paddingLeft="15.0dip"
                        android:paddingRight="15.0dip" >

                        <TextView
                            android:id="@+id/tuijianliebiao"
                            style="@style/btn_dialog_1"
                            android:layout_width="0.0dip"
                            android:layout_height="40.0dip"
                            android:layout_marginRight="8.0dip"
                            android:layout_weight="1.0"
                            android:background="@drawable/btn_dialog_neg"
                            android:gravity="center"
                            android:text="@string/tuijianliebiao"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textColor="@color/group_header_text_color" />

                        <View
                            android:id="@id/btn_seperator3"
                            android:layout_width="1.0dip"
                            android:layout_height="fill_parent"
                            android:background="@drawable/between_button_line"
                            android:visibility="gone" />

                        <TextView
                            android:id="@id/button3"
                            style="@style/btn_dialog_1"
                            android:layout_width="0.0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:background="@drawable/btn_dialog_neg"
                            android:gravity="center"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textColor="@color/group_header_text_color"
                            android:visibility="gone" />

                        <View
                            android:id="@id/btn_seperator2"
                            android:layout_width="1.0dip"
                            android:layout_height="fill_parent"
                            android:background="@drawable/between_button_line"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/xiazailiebiao"
                            style="@style/btn_dialog_1"
                            android:layout_width="0.0dip"
                            android:layout_height="40.0dip"
                            android:layout_marginLeft="8.0dip"
                            android:layout_weight="1.0"
                            android:background="@drawable/btn_dialog_neg"
                            android:gravity="center"
                            android:text="@string/xiazailiebiao"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textColor="@color/group_header_text_color" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@id/wrapper"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@id/content_wraper"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="10.0dip"
                        android:paddingLeft="15.0dip"
                        android:paddingRight="15.0dip"
                        android:paddingTop="10.0dip" >

                        <LinearLayout
                            android:id="@id/content_custom"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" />

                        <LinearLayout
                            android:id="@id/custom"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@id/buttonPanel"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4.0dip"
                        android:layout_marginTop="4.0dip"
                        android:paddingLeft="15.0dip"
                        android:paddingRight="15.0dip" >

                        <TextView
                            android:id="@+id/zhichiyixia"
                            style="@style/btn_dialog_1"
                            android:layout_width="0.0dip"
                            android:layout_height="40.0dip"
                            android:layout_marginRight="8.0dip"
                            android:layout_weight="1.0"
                            android:background="@drawable/btn_dialog_neg"
                            android:gravity="center"
                            android:text="@string/zhichiyixia"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textColor="@color/group_header_text_color" />

                        <View
                            android:id="@id/btn_seperator3"
                            android:layout_width="1.0dip"
                            android:layout_height="fill_parent"
                            android:background="@drawable/between_button_line"
                            android:visibility="gone" />

                        <TextView
                            android:id="@id/button3"
                            style="@style/btn_dialog_1"
                            android:layout_width="0.0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:background="@drawable/btn_dialog_neg"
                            android:gravity="center"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textColor="@color/group_header_text_color"
                            android:visibility="gone" />

                        <View
                            android:id="@id/btn_seperator2"
                            android:layout_width="1.0dip"
                            android:layout_height="fill_parent"
                            android:background="@drawable/between_button_line"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/fankuiwenti"
                            style="@style/btn_dialog_1"
                            android:layout_width="0.0dip"
                            android:layout_height="40.0dip"
                            android:layout_marginLeft="8.0dip"
                            android:layout_weight="1.0"
                            android:background="@drawable/btn_dialog_neg"
                            android:gravity="center"
                            android:text="@string/fankuiwenti"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textColor="@color/group_header_text_color" />
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1.0dip"
                        android:layout_marginLeft="5dip"
                        android:layout_marginRight="5dip"
                        android:background="#ffd4d5d6" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_margin="5dip"
                        android:layout_marginTop="10dip"
                        android:shadowColor="@color/azure"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:text="@string/fankuixinxi"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@color/item_primary_title_text_color" />

                    <LinearLayout
                        android:id="@+id/AdLinearLayout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dip"
                        android:gravity="center_horizontal"
                        android:orientation="vertical" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <com.markupartist.android.widget.PullToRefreshListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:divider="#ffd4d5d6"
            android:dividerHeight="4dip"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" />
    </RelativeLayout>

</LinearLayout>